# p-font.com

./: .gitignore  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml  requirements.txt
.ebextensions/: eb.config
.github/workflows/: build_and_test.yml  deploy-to-eb.yml
.platform/hooks/postdeploy/: 02_sqlite_permissions.sh
.platform/hooks/predeploy/: 01_migrations.sh
config/: settings.py  urls.py
editor/: urls.py  views.py
editor/static/editor/: main.js  script.js  styles.css  typewrite.js
editor/templates/editor/: index.html
results/: urls.py  views.py
results/static/results/: styles.css
results/templates/results/: index.html
