[tool.poetry]
name = "p-font.com"
version = "0.1.0"
description = ""
authors = ["ni-xon <nixonuch_@outlook.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
Django = "^4.0.2"
django-mathfilters = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
